--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,12 @@ jobs:
           name: Resolv.conf
           command: cat /etc/resolv.conf
       - run:
+          name: dig api.nuget.org
+          command: dig api.nuget.org
+      - run:
+          name: curl api.nuget.org
+          command: curl https://api.nuget.org/v3/index.json
+      - run:
           name: Install NPM dependencies
           command: npm install
       - run:
