--- a/libs/low-level/Cusco.LowLevel.csproj
+++ b/libs/low-level/Cusco.LowLevel.csproj
@@ -5,8 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>preview</LangVersion>
 
-    <Authors>Aurélien Bidon &lt;abidon+supraxel@protonmail.com&gt;</Authors>
-    <Company>Supraxel</Company>
+    <PackageId>Cusco.LowLevel</PackageId>
 
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
@@ -14,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../unsafe-il/Cusco.UnsafeIL.ilproj" />
+    <ProjectReference Include="../unsafe-il/Cusco.UnsafeIL.ilproj"/>
   </ItemGroup>
 
   <Target Name="CheckNxModuleBoundaries" BeforeTargets="Build">
