--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,13 @@ jobs:
       - checkout:
           name: Checkout Git repository
       - run:
+          name: Install NPM dependencies
+          command: npm install
+      - run:
           name: Check formatting
           command: nx affected --configuration=production --target=format:check
 
-  test:
+  tests:
     docker:
       - image: supraxelgames/cusco-buildimage:<<pipeline.parameters.image-tag>>
     resource_class: medium
@@ -49,6 +52,9 @@ jobs:
       - checkout:
           name: Checkout Git repository
       - run:
+          name: Install NPM dependencies
+          command: npm install
+      - run:
           name: Build release configuration
           command: |-
             rm -rf -o nugets
@@ -59,5 +65,8 @@ workflows:
   main:
     jobs:
       - format-check
-      - test
-      - nuget
+      - tests
+      - nuget:
+          requires:
+            - format-check
+            - tests
