--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ parameters:
 
 jobs:
 
-  setup:
+  deps:
     docker:
       - image: supraxelgames/cusco-buildimage:<<pipeline.parameters.image-tag>>
     resource_class: small
@@ -17,7 +17,7 @@ jobs:
       - restore_cache:
           key: v1-deps-{{ checksum "package-lock.json" }}
       - run:
-          name: install dependencies
+          name: Install NPM dependencies
           command: npm install
       - save_cache:
           key: v1-deps-{{ checksum "package-lock.json" }}
@@ -34,6 +34,13 @@ jobs:
       - restore_cache:
           key: v1-deps-{{ checksum "package-lock.json" }}
       - run:
+          name: Install NPM dependencies
+          command: npm install
+      - save_cache:
+          key: v1-deps-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+      - run:
           name: Check formatting
           command: nx affected --configuration=production --target=format:check
 
@@ -46,6 +53,13 @@ jobs:
           name: Checkout Git repository
       - restore_cache:
           key: v1-deps-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install NPM dependencies
+          command: npm install
+      - save_cache:
+          key: v1-deps-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
       - run:
           name: Run unit tests
           command: |
@@ -63,6 +77,13 @@ jobs:
       - restore_cache:
           key: v1-deps-{{ checksum "package-lock.json" }}
       - run:
+          name: Install NPM dependencies
+          command: npm install
+      - save_cache:
+          key: v1-deps-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+      - run:
           name: Build release configuration
           command: |-
             rm -rf -o nugets
@@ -73,13 +94,13 @@ jobs:
 workflows:
   main:
     jobs:
-      - setup
+      - deps
       - format-check:
-          requires: [ setup ]
+          requires: [ deps ]
       - tests:
-          requires: [ setup ]
+          requires: [ deps ]
       - nuget:
           requires:
-            - setup
+            - deps
             - format-check
             - tests
