--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,23 +7,6 @@ parameters:
 
 jobs:
 
-  deps:
-    docker:
-      - image: supraxelgames/cusco-buildimage:<<pipeline.parameters.image-tag>>
-    resource_class: small
-    steps:
-      - checkout:
-          name: Checkout Git repository
-      - restore_cache:
-          key: v1-deps-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install NPM dependencies
-          command: npm install
-      - save_cache:
-          key: v1-deps-{{ checksum "package-lock.json" }}
-          paths:
-            - node_modules
-
   format-check:
     docker:
       - image: supraxelgames/cusco-buildimage:<<pipeline.parameters.image-tag>>
@@ -94,10 +77,7 @@ jobs:
 workflows:
   main:
     jobs:
-      - deps
-      - tests:
-          requires: [ deps ]
+      - tests
       - nuget:
           requires:
-            - deps
             - tests
