Adding Cusco.Core + updating docs to create a new module

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,3 +81,7 @@ workflows:
       - nuget:
           requires:
             - tests
+          filters:
+            branches:
+              only:
+                - main
