--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,28 @@ jobs:
           name: Check formatting
           command: nx affected --configuration=production --target=format:check
 
+  build:
+    docker:
+      - image: supraxelgames/cusco-buildimage:<<pipeline.parameters.image-tag>>
+    resource_class: medium
+    steps:
+      - checkout:
+          name: Checkout Git repository
+      - restore_cache:
+          key: v1-deps-{{ checksum "package-lock.json" }}
+      - run:
+          name: Install NPM dependencies
+          command: npm install
+      - save_cache:
+          key: v1-deps-{{ checksum "package-lock.json" }}
+          paths:
+            - node_modules
+      - run:
+          name: Build release configuration
+          command: |-
+            dotnet restore -f
+            dotnet pack -c Release -p:VersionPrefix=$(node -p "require('./package.json').version").$CIRCLE_BUILD_NUM;SourceRevisionId=<<pipeline.git.revision>>;RepositoryUrl=<<pipeline.project.git_url>>;RepositoryType=git;RepositoryBranch=<<pipeline.git.branch>>;IncludeSymbols=true;SymbolPackageFormat=snupkg;PackageLicenseFile=./LICENSE
+
   tests:
     docker:
       - image: supraxelgames/cusco-buildimage:<<pipeline.parameters.image-tag>>
@@ -71,13 +93,22 @@ jobs:
           command: |-
             rm -rf nugets
             dotnet restore -f
-            dotnet pack -o nugets -c Release -p:VersionPrefix=$(node -p "require('./package.json').version").$CIRCLE_BUILD_NUM;SourceRevisionId=<<pipeline.git.revision>>;RepositoryUrl=<<pipeline.project.git_url>>;RepositoryType=git;RepositoryBranch=<<pipeline.git.branch>>;IncludeSymbols=true;SymbolPackageFormat=snupkg
+            dotnet pack -o nugets -c Release -p:VersionPrefix=$(node -p "require('./package.json').version").$CIRCLE_BUILD_NUM;SourceRevisionId=<<pipeline.git.revision>>;RepositoryUrl=<<pipeline.project.git_url>>;RepositoryType=git;RepositoryBranch=<<pipeline.git.branch>>;IncludeSymbols=true;SymbolPackageFormat=snupkg;PackageLicenseFile=./LICENSE
             for nuget in nugets/*.nupkg ; do dotnet nuget push $nuget -k $NUGET_KEY --source https://api.nuget.org/v3/index.json ; done
 
 workflows:
   main:
     jobs:
       - tests
+      - build:
+          filters:
+            branches:
+              ignore:
+                - main
       - nuget:
           requires:
             - tests
+          filters:
+            branches:
+              only:
+                - main
