Remove unused dependency to Amazon.Ion and add README for every lib

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,5 +2,7 @@
   <PropertyGroup>
     <Authors>Aurélien Bidon &lt;abidon+supraxel@protonmail.com&gt;</Authors>
     <Company>Supraxel</Company>
+
+    <NoWarn>S1125;S3877</NoWarn>
   </PropertyGroup>
 </Project>
