Add README to NuGet

--- a/libs/core/Cusco.Core.csproj
+++ b/libs/core/Cusco.Core.csproj
@@ -6,6 +6,7 @@
     <LangVersion>preview</LangVersion>
 
     <PackageId>Cusco.Core</PackageId>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
 
     <OutputPath>../../dist/libs/core</OutputPath>
   </PropertyGroup>
