--- a/libs/dispatch/Cusco.Dispatch.csproj
+++ b/libs/dispatch/Cusco.Dispatch.csproj
@@ -6,6 +6,7 @@
     <LangVersion>preview</LangVersion>
 
     <PackageId>Cusco.Dispatch</PackageId>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
 
     <OutputPath>../../dist/libs/dispatch</OutputPath>
   </PropertyGroup>
