--- a/libs/core/Cusco.Core.csproj
+++ b/libs/core/Cusco.Core.csproj
@@ -6,6 +6,7 @@
     <LangVersion>preview</LangVersion>
 
     <PackageId>Cusco.Core</PackageId>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 
     <OutputPath>../../dist/libs/core</OutputPath>
@@ -13,6 +14,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\low-level\Cusco.LowLevel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="./LICENSE" Pack="true" PackagePath="/" />
+    <None Include="./README.md" Pack="true" PackagePath="/" />
   </ItemGroup>
 
   <Target Name="CheckNxModuleBoundaries" BeforeTargets="Build">
