--- a/libs/core/Cusco.Core.csproj
+++ b/libs/core/Cusco.Core.csproj
@@ -6,12 +6,19 @@
     <LangVersion>preview</LangVersion>
 
     <PackageId>Cusco.Core</PackageId>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
 
     <OutputPath>../../dist/libs/core</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\low-level\Cusco.LowLevel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="./LICENSE" Pack="true" PackagePath="/" />
+    <None Include="./README.md" Pack="true" PackagePath="/" />
   </ItemGroup>
 
   <Target Name="CheckNxModuleBoundaries" BeforeTargets="Build">
