--- a/libs/csharp-polyfills/Cusco.CSharpPolyfills.csproj
+++ b/libs/csharp-polyfills/Cusco.CSharpPolyfills.csproj
@@ -6,9 +6,16 @@
     <LangVersion>preview</LangVersion>
 
     <PackageId>Cusco.CSharpPolyfills</PackageId>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
 
     <OutputPath>../../dist/libs/csharp-polyfills</OutputPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="./LICENSE" Pack="true" PackagePath="/" />
+    <None Include="./README.md" Pack="true" PackagePath="/" />
+  </ItemGroup>
 
   <Target Name="CheckNxModuleBoundaries" BeforeTargets="Build">
     <Exec Command="node ../../node_modules/@nx-dotnet/core/src/tasks/check-module-boundaries.js -p csharp-polyfills" />
