Future are awaitable + CuscoRT.Unreachable

--- a/libs/pathfinding-test/Cusco.Pathfinding.Test.csproj
+++ b/libs/pathfinding-test/Cusco.Pathfinding.Test.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <LangVersion>preview</LangVersion>
 
     <OutputPath>../../dist/libs/pathfinding-test</OutputPath>
   </PropertyGroup>
