--- a/libs/reactivex-test/Cusco.ReactiveX.Test.csproj
+++ b/libs/reactivex-test/Cusco.ReactiveX.Test.csproj
@@ -5,12 +5,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <LangVersion>preview</LangVersion>
     
     <OutputPath>../../dist/libs/reactive-test</OutputPath>
   </PropertyGroup>
   
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="NUnit.Analyzers" Version="3.3.0" />
@@ -18,10 +20,10 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\reactive\Cusco.Reactive.csproj" />
+    <ProjectReference Include="..\reactivex\Cusco.ReactiveX.csproj" />
   </ItemGroup>
   
   <Target Name="CheckNxModuleBoundaries" BeforeTargets="Build">
-    <Exec Command="node ../../node_modules/@nx-dotnet/core/src/tasks/check-module-boundaries.js -p reactive-test" />
+    <Exec Command="node ../../node_modules/@nx-dotnet/core/src/tasks/check-module-boundaries.js -p reactivex-test" />
   </Target>
 </Project>
