--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@nrwl/workspace": "14.3.6",
     "@nx-dotnet/core": "^1.12.0",
     "@nx-plus/docusaurus": "^14.0.0",
+    "@types/ejs": "^3.1.1",
+    "ejs": "^3.1.8",
     "nx": "14.3.6",
     "prettier": "^2.6.2",
     "typescript": "~4.7.2"
