Metadata and formatting

--- a/libs/reactivex/Cusco.ReactiveX.csproj
+++ b/libs/reactivex/Cusco.ReactiveX.csproj
@@ -9,7 +9,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
 
-    <OutputPath>../../dist/libs/reactive</OutputPath>
+    <OutputPath>../../dist/libs/reactivex</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
